--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,11 +1,12 @@
 .Form{
-    max-width: 1000px;
+    max-width: 800px;
     margin: 20px auto;
     padding: 15px 20px;
     border: 2px solid #282c34;
 }
 .Form label{
     display: block;
+    padding: 5px 10px;
 }
 .Form button{
     padding: 5px 10px;
@@ -20,6 +21,7 @@
 }
 .Description textarea{
     width: 80%;
+    margin-bottom: 20px;
 }
 
 .Form h3{
