--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -1,6 +1,9 @@
 .Button{
     border: 1px solid #000;
-    background: #282c34;
+    background: #525a6a;
     color: #fff;
     border-radius: 5px;
+}
+.Button:hover{
+    background: #282c34;
 }
