--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -3,3 +3,18 @@
     border-radius: 4px;
     padding: 20px 10px;
 }
+.Post{
+    border: 1px solid #282c34;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 10px 0;
+}
+.Date{
+    font-size: 13px;
+}
+.Text{
+    font-size: 18px;
+}
+.Post button{
+    padding: 5px 15px;
+}
