--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -1,5 +1,19 @@
 .Home{
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 25px auto 0;
     padding: 10px 20px;
+    border: 1px solid #282c34;
+    border-radius: 4px;
+}
+.EPost{
+    border: 1px solid #282c34;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 10px 0;
+}
+.EDate{
+    font-size: 13px;
+}
+.ETitle{
+    font-size: 18px;
 }
