--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -1,15 +1,17 @@
 .Home{
     max-width: 1200px;
     margin: 25px auto 0;
-    padding: 10px 20px;
-    border: 1px solid #282c34;
+    padding: 30px 20px 10px;
+    border: 3px solid #ff5508;
+    background: #37474f;
     border-radius: 4px;
 }
 .EPost{
-    border: 1px solid #282c34;
+    background: #d6d6d6;
+    border: 3px solid #3FF9DC;
     border-radius: 5px;
     padding: 10px 20px;
-    margin: 10px 0;
+    margin: 20px 0;
 }
 .EDate{
     font-size: 13px;
