--- a/src/containers/Add/Add.css
+++ b/src/containers/Add/Add.css
@@ -1,5 +1,9 @@
 .Add{
+    min-height: 80vh;
     max-width: 1200px;
-    margin: 0 auto;
-    padding: 10px 20px;
+    margin: 25px auto 0;
+    padding: 30px 20px 10px;
+    border: 3px solid #ff5508;
+    background: #37474f;
+    border-radius: 4px;
 }
